<resources>
    <string name="app_name">CoffeeApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">Кофе my love forever</string>
    <string name="recipes">Рецепты</string>
    <string name="calculator">Калькулятор</string>
    <string name="devices">Приготовление</string>
    <string name="sorts">Сорта</string>
    <string name="about">О кофе</string>
    <string name="support">Поддержка</string>
    <string name="title_activity_recipes">Рецепты</string>
    <string name="title_activity_cauculator">CauculatorActivity</string>
    <string name="title_activity_devices">DevicesActivity</string>
    <string name="title_activity_sopts">SoptsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_support">SupportActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
